--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -394,7 +394,67 @@
                   "designation": "सेवानिवृत्त बैंकर",
                   "quote": "मैं अपने परिवार की सोना संपत्ति यूनिगोल्ड को सौंपता हूं क्योंकि उनकी सुरक्षा प्रणाली अद्वितीय है।"
                 }
-              }
+              },
+                "process": {
+                  "title": "सोने की लोन आवेदन प्रक्रिया",
+                  "subtitle": "प्रतिस्पर्धी ब्याज दरों के साथ सरल, पारदर्शी और आसान सोने की लोन",
+                  "eligibility": {
+                    "title": "पात्रता मानदंड",
+                    "description": "यूनिगोल्ड फाइनेंस से सोने की लोन लेना सरल और समावेशी है। हमारे पात्रता मानदंड विभिन्न प्रकार के ग्राहकों के लिए बनाए गए हैं।",
+                    "point1": "न्यूनतम आयु आवश्यकता: 18 वर्ष",
+                    "point2": "सोने के आभूषण, सिक्के या बिस्कुट का स्वामित्व",
+                    "point3": "क्रेडिट स्कोर या आय प्रमाण की आवश्यकता नहीं"
+                  },
+                  "documents": {
+                    "title": "आवश्यक दस्तावेज",
+                    "description": "हम दस्तावेज़ीकरण को सरल रखते हैं।",
+                    "idProof": {
+                      "title": "पहचान प्रमाण",
+                      "examples": "आधार कार्ड, पैन कार्ड, वोटर आईडी या पासपोर्ट"
+                    },
+                    "addressProof": {
+                      "title": "पता प्रमाण",
+                      "examples": "उपयोगिता बिल, किराया अनुबंध या आधार कार्ड"
+                    },
+                    "goldDetails": {
+                      "title": "सोने का विवरण",
+                      "examples": "गिरवी रखे जा रहे सोने का विवरण"
+                    }
+                  },
+                  "steps": {
+                    "title": "आवेदन चरण",
+                    "step1": {
+                      "title": "शाखा/वेबसाइट पर जाएं",
+                      "description": "किसी भी शाखा में या हमारी वेबसाइट के माध्यम से आवेदन शुरू करें"
+                    },
+                    "step2": {
+                      "title": "सोने का मूल्यांकन",
+                      "description": "हमारे विशेषज्ञ सोने की शुद्धता और वजन का आकलन करते हैं"
+                    },
+                    "step3": {
+                      "title": "दस्तावेज़ सत्यापन",
+                      "description": "आपके दस्तावेज़ों का त्वरित सत्यापन"
+                    },
+                    "step4": {
+                      "title": "लोन जारी",
+                      "description": "अनुमोदन के कुछ घंटों के भीतर धनराशि प्राप्त करें"
+                    }
+                  },
+                  "faq": {
+                    "title": "अक्सर पूछे जाने वाले प्रश्न",
+                    "maxLoanQuestion": "मैं अपने सोने के बदले अधिकतम कितना लोन ले सकता हूँ?",
+                    "maxLoanAnswer": "आप सोने के बाजार मूल्य का 75% तक लोन प्राप्त कर सकते हैं।",
+                    "valuationQuestion": "सोने का मूल्यांकन कैसे किया जाता है?",
+                    "valuationAnswer": "हमारे प्रमाणित मूल्यांकनकर्ता उन्नत परीक्षण विधियों का उपयोग करके सोने की शुद्धता और वजन निर्धारित करते हैं।",
+                    "earlyRepaymentQuestion": "क्या मैं लोन अवधि समाप्त होने से पहले चुका सकता हूँ?",
+                    "earlyRepaymentAnswer": "हां, आप 3 महीने के बाद न्यूनतम पूर्व भुगतान शुल्क के साथ कभी भी पूर्व भुगतान कर सकते हैं।"
+                  }
+                },"proces": {
+  "faq": {
+    "cta": "अधिक प्रश्न हैं? हमसे संपर्क करें"
+  }
+}
+              
             
   
 }
