--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -394,6 +394,66 @@
                     "designation": "ଅବସରପ୍ରାପ୍ତ ବ୍ୟାଙ୍କର",
                     "quote": "ମୁଁ ମୋ ପରିବାରର ସୁନା ସମ୍ପତ୍ତି ପାଇଁ ୟୁନିଗୋଲ୍ଡକୁ ବିଶ୍ୱାସ କରେ, କାରଣ ସେମାନଙ୍କର ସୁରକ୍ଷା ବ୍ୟବସ୍ଥା ଅତୁଳନୀୟ।"
                   }
-                }
+                },
+                  "process": {
+                    "title": "ସୁନା ଋଣ ଆବେଦନ ପ୍ରକ୍ରିୟା",
+                    "subtitle": "ପ୍ରତିଯୋଗିତାମୂଳକ ସୁଧ ହାରରେ ସରଳ, ସ୍ପଷ୍ଟ ଏବଂ ସହଜ ସୁନା ଋଣ",
+                    "eligibility": {
+                      "title": "ଯୋଗ୍ୟତା ନିର୍ଣାୟକ",
+                      "description": "ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ସହିତ ସୁନା ଋଣ ପାଇଁ ଆବେଦନ କରିବା ସରଳ ଏବଂ ସମାବେଶୀ | ଆମର ଯୋଗ୍ୟତା ନିର୍ଣାୟକ ବିଭିନ୍ନ ପ୍ରକାରର ଗ୍ରାହକଙ୍କ ପାଇଁ ଉଦ୍ଦିଷ୍ଟ |",
+                      "point1": "ସର୍ବନିମ୍ନ ବୟସ ଆବଶ୍ୟକତା: 18 ବର୍ଷ",
+                      "point2": "ସୁନା ଅଳଙ୍କାର, ମୁଦ୍ରା କିମ୍ବା ବାଟିର ମାଲିକାନା",
+                      "point3": "କ୍ରେଡିଟ ସ୍କୋର କିମ୍ବା ଆୟ ପ୍ରମାଣ ଆବଶ୍ୟକ ନାହିଁ"
+                    },
+                    "documents": {
+                      "title": "ଆବଶ୍ୟକ ଦଲିଲ",
+                      "description": "ଆମେ ଦଲିଲକରଣକୁ ସରଳ ରଖୁ |",
+                      "idProof": {
+                        "title": "ପରିଚୟ ପ୍ରମାଣ",
+                        "examples": "ଆଧାର କାର୍ଡ, PAN କାର୍ଡ, ଭୋଟର୍ ଆଇଡି କିମ୍ବା ପାସପୋର୍ଟ"
+                      },
+                      "addressProof": {
+                        "title": "ଠିକଣା ପ୍ରମାଣ",
+                        "examples": "ଉପଯୋଗିତା ବିଲ, ଭଡା ଚୁକ୍ତି କିମ୍ବା ଆଧାର କାର୍ଡ"
+                      },
+                      "goldDetails": {
+                        "title": "ସୁନା ବିବରଣୀ",
+                        "examples": "ଗିରଫ ରଖାଯାଉଥିବା ସୁନା ବିଷୟରେ ବିବରଣୀ"
+                      }
+                    },
+                    "steps": {
+                      "title": "ଆବେଦନ ପଦକ୍ଷେପ",
+                      "step1": {
+                        "title": "ଶାଖା/ୱେବସାଇଟ୍ ପରିଦର୍ଶନ କରନ୍ତୁ",
+                        "description": "କୌଣସି ଶାଖାରେ କିମ୍ବା ଆମର ୱେବସାଇଟ୍ ମାଧ୍ୟମରେ ଆବେଦନ ଆରମ୍ଭ କରନ୍ତୁ"
+                      },
+                      "step2": {
+                        "title": "ସୁନା ମୂଲ୍ୟାୟନ",
+                        "description": "ଆମର ବିଶେଷଜ୍ଞମାନେ ସୁନାର ଶୁଦ୍ଧତା ଏବଂ ଓଜନ ନିର୍ଣୟ କରନ୍ତି"
+                      },
+                      "step3": {
+                        "title": "ଦଲିଲ ସତ୍ୟାପନ",
+                        "description": "ଆପଣଙ୍କର ଦାଖଲ କରାଯାଇଥିବା ଦଲିଲର ଶୀଘ୍ର ସତ୍ୟାପନ"
+                      },
+                      "step4": {
+                        "title": "ଋଣ ବିତରଣ",
+                        "description": "ଅନୁମୋଦନର କିଛି ଘଣ୍ଟା ମଧ୍ୟରେ ଅର୍ଥ ପ୍ରାପ୍ତ କରନ୍ତୁ"
+                      }
+                    },
+                    "faq": {
+                      "title": "ଅଧିକ ପଚରାଯାଉଥିବା ପ୍ରଶ୍ନ",
+                      "maxLoanQuestion": "ମୁଁ ମୋ ସୁନା ବଦଳରେ ସର୍ବାଧିକ କେତେ ଋଣ ପାଇପାରିବି?",
+                      "maxLoanAnswer": "ଆପଣ ସୁନାର ବଜାର ମୂଲ୍ୟର 75% ପର୍ଯ୍ୟନ୍ତ ଋଣ ପାଇପାରିବେ |",
+                      "valuationQuestion": "ସୁନାର ମୂଲ୍ୟାୟନ କିପରି କରାଯାଏ?",
+                      "valuationAnswer": "ଆମର ପ୍ରମାଣିତ ମୂଲ୍ୟାୟନକାରୀମାନେ ଉନ୍ନତ ପରୀକ୍ଷା ପଦ୍ଧତି ବ୍ୟବହାର କରି ସୁନାର ଶୁଦ୍ଧତା ଏବଂ ଓଜନ ନିର୍ଣୟ କରନ୍ତି |",
+                      "earlyRepaymentQuestion": "ମୁଁ ଋଣ ମିଆଦ ଶେଷ ହେବା ପୂର୍ବରୁ ପରିଶୋଧ କରିପାରିବି କି?",
+                      "earlyRepaymentAnswer": "ହଁ, ଆପଣ 3 ମାସ ପରେ ସର୍ବନିମ୍ନ ପୂର୍ବ ପରିଶୋଧ ଶୁଳ୍କ ସହିତ ଯେକୌଣସି ସମୟରେ ପୂର୍ବ ପରିଶୋଧ କରିପାରିବେ |"
+                    }
+                  },"proces": {
+  "faq": {
+    "cta": "ଆଉ ପ୍ରଶ୍ନ ଅଛି କି? ଆମ ସହିତ ଯୋଗାଯୋଗ କରନ୍ତୁ"
+  }
+}
+                
                  
 }
