--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -453,7 +453,79 @@
   "faq": {
     "cta": "अधिक प्रश्न हैं? हमसे संपर्क करें"
   }
-}
+},
+  "benefits": {
+    "title": "सोने के लोन के लाभ",
+    "subtitle": "अपनी सोने की लोन आवश्यकताओं के लिए यूनिगोल्ड फाइनेंस को क्यों चुनें",
+    "cta": "अभी सोने का लोन लें",
+    "lowInterest": {
+      "title": "कम ब्याज दरें",
+      "description": "पर्सनल लोन या क्रेडिट कार्ड की तुलना में काफी कम ब्याज दरों का आनंद लें। हमारे सोने के लोन चिकित्सा आपात स्थिति, शादी या व्यवसाय की जरूरतों के लिए एक किफायती समाधान प्रदान करते हैं।"
+    },
+    "quickAccess": {
+      "title": "धन का त्वरित उपयोग",
+      "description": "हमारी त्वरित स्वीकृति प्रक्रिया और न्यूनतम दस्तावेज़ीकरण के साथ कुछ घंटों में धन प्राप्त करें। जरूरी खर्चों या नियोजित निवेश के लिए आदर्श।"
+    },
+    "highLTV": {
+      "title": "उच्च लोन-टू-वैल्यू",
+      "description": "अतिरिक्त जमानत के बिना अपने सोने के मूल्य का 75% तक उधार लें। अपनी वित्तीय आवश्यकताओं के लिए अधिकतम धनराशि प्राप्त करें।"
+    },
+    "security": {
+      "title": "सुरक्षा और सुरक्षा",
+      "description": "आपका सोना हमारे बीमित तिजोरियों में 24/7 निगरानी और बायोमेट्रिक पहुंच के साथ सुरक्षित रूप से संग्रहीत है। भुगतान के बाद कभी भी इसे वापस लें।"
+    }
+  },
+    "benefits": {
+      "title": "हमारे गोल्ड लोन क्यों चुनें",
+      "subtitle": "अपने सोने की संपत्ति का स्वामित्व रखते हुए तुरंत नकदी प्राप्त करें",
+      "lowInterest": {
+        "title": "कम ब्याज दरें",
+        "description": "पर्सनल लोन या क्रेडिट कार्ड से काफी कम दरों का आनंद लें",
+        "stats": "0.79% प्रति माह से शुरू"
+      },
+      "quickAccess": {
+        "title": "त्वरित स्वीकृति",
+        "description": "आवेदन के कुछ घंटों के भीतर धन प्राप्त करें",
+        "stats": "90 मिनट में अनुमोदन"
+      },
+      "highLTV": {
+        "title": "उच्च ऋण मूल्य",
+        "description": "अपने सोने के मूल्य का 75% तक ऋण राशि प्राप्त करें",
+        "stats": "75% LTV अनुपात"
+      },
+      "security": {
+        "title": "100% सुरक्षित",
+        "description": "आपका सोना हमारे RBI-अनुमोदित तिजोरियों में सुरक्षित है",
+        "stats": "बीमित भंडारण"
+      },
+      "featuresTitle": "हमारी गोल्ड लोन सुविधाएँ",
+      "features": {
+        "1": "3 महीने के बाद कोई पूर्व भुगतान शुल्क नहीं",
+        "2": "लचीला पुनर्भुगतान विकल्प",
+        "3": "कोई छिपे हुए शुल्क के साथ पारदर्शी मूल्य निर्धारण",
+        "4": "नवीनीकरण सुविधा उपलब्ध"
+      },
+      "testimonialsTitle": "हमारे ग्राहक क्या कहते हैं",
+      "testimonials": {
+        "1": {
+          "name": "राजेश कुमार",
+          "role": "छोटे व्यवसाय के मालिक",
+          "quote": "मेरी आपातकालीन चिकित्सा आवश्यकताओं के लिए 2 घंटे में ₹2 लाख मिले"
+        },
+        "2": {
+          "name": "प्रिया शर्मा",
+          "role": "गृहिणी",
+          "quote": "मैंने जिन 4 अन्य बैंकों की जाँच की, उनकी तुलना में सर्वोत्तम ब्याज दरें"
+        }
+      },
+      "cta": {
+        "title": "अपना लोन प्राप्त करने के लिए तैयार हैं?",
+        "subtitle": "अपने क्रेडिट स्कोर को प्रभावित किए बिना तत्काल अनुमोदन प्राप्त करें",
+        "button": "अभी आवेदन करें"
+      }
+    }
+  
+
               
             
   
