--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -453,7 +453,79 @@
   "faq": {
     "cta": "ଆଉ ପ୍ରଶ୍ନ ଅଛି କି? ଆମ ସହିତ ଯୋଗାଯୋଗ କରନ୍ତୁ"
   }
-}
+},
+  "benefits": {
+    "title": "ସୁନା ଋଣର ଲାଭ",
+    "subtitle": "ଆପଣଙ୍କର ସୁନା ଋଣ ଆବଶ୍ୟକତା ପାଇଁ ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସକୁ କାହିଁକି ବାଛିବେ",
+    "cta": "ବର୍ତ୍ତମାନ ସୁନା ଋଣ ପାଇଁ ଆବେଦନ କରନ୍ତୁ",
+    "lowInterest": {
+      "title": "କମ ସୁଧ ହାର",
+      "description": "ବ୍ୟକ୍ତିଗତ ଋଣ କିମ୍ବା କ୍ରେଡିଟ କାର୍ଡ ତୁଳନାରେ ଗୁରୁତ୍ୱପୂର୍ଣ୍ଣ ଭାବରେ କମ ସୁଧ ହାର ଉପଭୋଗ କରନ୍ତୁ। ଆମର ସୁନା ଋଣ ଡାକ୍ତରୀ ଜରୁରୀକାଳୀନ, ବିବାହ କିମ୍ବା ବ୍ୟବସାୟ ଆବଶ୍ୟକତା ପାଇଁ ଏକ ସହଜଳଭ ଉପାୟ ପ୍ରଦାନ କରେ।"
+    },
+    "quickAccess": {
+      "title": "ଅର୍ଥର ସହଜ ପ୍ରବେଶ",
+      "description": "ଆମର ଦ୍ରୁତ ଅନୁମୋଦନ ପ୍ରକ୍ରିୟା ଏବଂ ସର୍ବନିମ୍ନ ଡକ୍ୟୁମେଣ୍ଟେସନ୍ ସହିତ କିଛି ଘଣ୍ଟା ମଧ୍ୟରେ ଅର୍ଥ ପ୍ରାପ୍ତ କରନ୍ତୁ। ଜରୁରୀକାଳୀନ ଖର୍ଚ୍ଚ କିମ୍ବା ଯୋଜନାବଦ୍ଧ ବିନିଯୋଗ ପାଇଁ ଉପଯୁକ୍ତ।"
+    },
+    "highLTV": {
+      "title": "ଉଚ୍ଚ ଋଣ-ଟୁ-ଭାଲ୍ୟୁ",
+      "description": "ଅତିରିକ୍ତ ଜାମିନ ବିନା ଆପଣଙ୍କ ସୁନାର ମୂଲ୍ୟର 75% ପର୍ଯ୍ୟନ୍ତ ଋଣ ନିଅନ୍ତୁ। ଆପଣଙ୍କର ଆର୍ଥିକ ଆବଶ୍ୟକତା ପାଇଁ ସର୍ବାଧିକ ଅର୍ଥ ପ୍ରାପ୍ତ କରନ୍ତୁ।"
+    },
+    "security": {
+      "title": "ସୁରକ୍ଷା ଏବଂ ସୁରକ୍ଷା",
+      "description": "ଆପଣଙ୍କ ସୁନା 24/7 ନିରୀକ୍ଷଣ ଏବଂ ବାୟୋମେଟ୍ରିକ୍ ପ୍ରବେଶ ସହିତ ଆମର ବିମାଯୁକ୍ତ ଭଲ୍ଟରେ ସୁରକ୍ଷିତ ଭାବରେ ସଂରକ୍ଷିତ ହୋଇଛି। ପରିଶୋଧ ପରେ ଯେକୌଣସି ସମୟରେ ଏହାକୁ ଫେରସ୍ତ କରନ୍ତୁ।"
+    }
+  },
+    "benefits": {
+      "title": "ଆମର ସୁନା ଋଣ କାହିଁକି ବାଛିବେ",
+      "subtitle": "ଆପଣଙ୍କ ସୁନା ସମ୍ପତ୍ତିର ମାଲିକାନା ରଖିବା ସହିତ ତୁରନ୍ତ ନଗଦ ପ୍ରାପ୍ତ କରନ୍ତୁ",
+      "lowInterest": {
+        "title": "କମ ସୁଧ ହାର",
+        "description": "ବ୍ୟକ୍ତିଗତ ଋଣ କିମ୍ବା କ୍ରେଡିଟ କାର୍ଡ ଠାରୁ ଗୁରୁତ୍ୱପୂର୍ଣ୍ଣ ଭାବରେ କମ ହାର ଉପଭୋଗ କରନ୍ତୁ",
+        "stats": "ମାସକୁ 0.79% ରୁ ଆରମ୍ଭ"
+      },
+      "quickAccess": {
+        "title": "ଦ୍ରୁତ ଅନୁମୋଦନ",
+        "description": "ଆବେଦନର କିଛି ଘଣ୍ଟା ମଧ୍ୟରେ ଅର୍ଥ ପ୍ରାପ୍ତ କରନ୍ତୁ",
+        "stats": "90 ମିନିଟ୍ ମଧ୍ୟରେ ଅନୁମୋଦନ"
+      },
+      "highLTV": {
+        "title": "ଉଚ୍ଚ ଋଣ ମୂଲ୍ୟ",
+        "description": "ଆପଣଙ୍କ ସୁନାର ମୂଲ୍ୟର 75% ପର୍ଯ୍ୟନ୍ତ ଋଣ ରାଶି ପ୍ରାପ୍ତ କରନ୍ତୁ",
+        "stats": "75% LTV ଅନୁପାତ"
+      },
+      "security": {
+        "title": "100% ସୁରକ୍ଷିତ",
+        "description": "ଆପଣଙ୍କ ସୁନା ଆମର RBI-ଅନୁମୋଦିତ ଭଲ୍ଟରେ ସୁରକ୍ଷିତ ଅଛି",
+        "stats": "ବିମାଯୁକ୍ତ ଭଣ୍ଡାରଣ"
+      },
+      "featuresTitle": "ଆମର ସୁନା ଋଣ ସୁବିଧାଗୁଡିକ",
+      "features": {
+        "1": "3 ମାସ ପରେ କୌଣସି ପୂର୍ବ ପରିଶୋଧ ଶୁଳ୍କ ନାହିଁ",
+        "2": "ନମନୀୟ ପରିଶୋଧ ବିକଳ୍ପ",
+        "3": "କୌଣସି ଲୁକ୍କାୟିତ ଫି ବିନା ସ୍ୱଚ୍ଛ ମୂଲ୍ୟ ନିର୍ଧାରଣ",
+        "4": "ନବୀକରଣ ସୁବିଧା ଉପଲବ୍ଧ"
+      },
+      "testimonialsTitle": "ଆମର ଗ୍ରାହକମାନେ କଣ କହନ୍ତି",
+      "testimonials": {
+        "1": {
+          "name": "ରାଜେଶ କୁମାର",
+          "role": "ଛୋଟ ବ୍ୟବସାୟ ମାଲିକ",
+          "quote": "ମୋର ଜରୁରୀକାଳୀନ ଡାକ୍ତରୀ ଆବଶ୍ୟକତା ପାଇଁ 2 ଘଣ୍ଟା ମଧ୍ୟରେ ₹2 ଲକ୍ଷ ମିଳିଲା"
+        },
+        "2": {
+          "name": "ପ୍ରିୟା ଶର୍ମା",
+          "role": "ଗୃହିଣୀ",
+          "quote": "ମୁଁ ଯାହା 4 ଅନ୍ୟ ବ୍ୟାଙ୍କ ଯାଞ୍ଚ କଲି, ସେଥିରୁ ଉତ୍ତମ ସୁଧ ହାର"
+        }
+      },
+      "cta": {
+        "title": "ଆପଣଙ୍କ ଋଣ ପାଇଁ ପ୍ରସ୍ତୁତ କି?",
+        "subtitle": "ଆପଣଙ୍କ କ୍ରେଡିଟ ସ୍କୋରକୁ ପ୍ରଭାବିତ ନକରି ତୁରନ୍ତ ଅନୁମୋଦନ ପ୍ରାପ୍ତ କରନ୍ତୁ",
+        "button": "ବର୍ତ୍ତମାନ ଆବେଦନ କରନ୍ତୁ"
+      }
+    }
+  
+
                 
                  
 }
