--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -523,7 +523,45 @@
         "subtitle": "अपने क्रेडिट स्कोर को प्रभावित किए बिना तत्काल अनुमोदन प्राप्त करें",
         "button": "अभी आवेदन करें"
       }
-    }
+    },
+      "services": {
+        "title": "मूल्यवर्धित सेवाएं",
+        "subtitle": "सोने के लोन से परे - आपकी आवश्यकताओं के लिए व्यापक वित्तीय समाधान",
+        "learnMore": "अधिक जानें",
+        "insurance": {
+          "title": "बीमा सेवाएं",
+          "description": "चोरी, क्षति या हानि के विरुद्ध आपके गिरवी रखे सोने और कीमती सामान की पूर्ण सुरक्षा",
+          "features": [
+            "24/7 बीमित तिजोरी भंडारण",
+            "पूर्ण बाजार मूल्य कवरेज",
+            "त्वरित दावा निपटान"
+          ]
+        },
+        "advisory": {
+          "title": "वित्तीय सलाह",
+          "description": "निवेश योजना, ऋण प्रबंधन और धन निर्माण के लिए विशेषज्ञ मार्गदर्शन",
+          "features": [
+            "व्यक्तिगत वित्तीय योजनाएं",
+            "टैक्स अनुकूलन रणनीतियाँ",
+            "सेवानिवृत्ति योजना"
+          ]
+        },
+        "wealth": {
+          "title": "धन प्रबंधन",
+          "description": "दीर्घकालिक समृद्धि के लिए आपकी संपत्ति को बढ़ाने और सुरक्षित करने के रणनीतिक समाधान",
+          "features": [
+            "पोर्टफोलियो प्रबंधन",
+            "शिक्षा निधि योजना",
+            "रियल एस्टेट निवेश मार्गदर्शन"
+          ]
+        },
+        "cta": {
+          "title": "अपने वित्तीय भविष्य को सुरक्षित करने के लिए तैयार हैं?",
+          "subtitle": "व्यापक वित्तीय समाधानों के बारे में आज ही हमारे विशेषज्ञों से बात करें",
+          "button": "परामर्श बुक करें"
+        }
+      }
+    
   
 
               
