--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -523,7 +523,45 @@
         "subtitle": "ଆପଣଙ୍କ କ୍ରେଡିଟ ସ୍କୋରକୁ ପ୍ରଭାବିତ ନକରି ତୁରନ୍ତ ଅନୁମୋଦନ ପ୍ରାପ୍ତ କରନ୍ତୁ",
         "button": "ବର୍ତ୍ତମାନ ଆବେଦନ କରନ୍ତୁ"
       }
-    }
+    },
+      "services": {
+        "title": "ମୂଲ୍ୟବର୍ଦ୍ଧିତ ସେବାଗୁଡ଼ିକ",
+        "subtitle": "ସୁନା ଋଣ ବାହାରେ - ଆପଣଙ୍କର ଆବଶ୍ୟକତା ପାଇଁ ସମ୍ପୂର୍ଣ୍ଣ ଆର୍ଥିକ ସମାଧାନ",
+        "learnMore": "ଅଧିକ ଜାଣନ୍ତୁ",
+        "insurance": {
+          "title": "ବିମା ସେବା",
+          "description": "ଚୋରି, କ୍ଷତି କିମ୍ବା ହାନୀରୁ ଆପଣଙ୍କର ଗିରଫ ରଖାଯାଇଥିବା ସୁନା ଏବଂ ମୂଲ୍ୟବାନ ଜିନିଷର ସମ୍ପୂର୍ଣ୍ଣ ସୁରକ୍ଷା",
+          "features": [
+            "24/7 ବିମାଯୁକ୍ତ ଭଲ୍ଟ ସଂରକ୍ଷଣ",
+            "ସମ୍ପୂର୍ଣ୍ଣ ବଜାର ମୂଲ୍ୟ କଭରେଜ୍",
+            "ଦ୍ରୁତ ଦାବି ସମାଧାନ"
+          ]
+        },
+        "advisory": {
+          "title": "ଆର୍ଥିକ ପରାମର୍ଶ",
+          "description": "ବିନିଯୋଗ ଯୋଜନା, ଋଣ ପରିଚାଳନା ଏବଂ ଧନ ସୃଷ୍ଟି ପାଇଁ ବିଶେଷଜ୍ଞ ମାର୍ଗଦର୍ଶନ",
+          "features": [
+            "ବ୍ୟକ୍ତିଗତ ଆର୍ଥିକ ଯୋଜନା",
+            "ଟ୍ୟାକ୍ସ ଅପ୍ଟିମାଇଜେସନ୍ ରଣନୀତି",
+            "ଅବସର ଯୋଜନା"
+          ]
+        },
+        "wealth": {
+          "title": "ଧନ ପରିଚାଳନା",
+          "description": "ଦୀର୍ଘଦିନୀୟ ସମୃଦ୍ଧି ପାଇଁ ଆପଣଙ୍କର ସମ୍ପତ୍ତିକୁ ବୃଦ୍ଧି କରିବା ଏବଂ ସୁରକ୍ଷିତ କରିବା ପାଇଁ ରଣନୀତିକ ସମାଧାନ",
+          "features": [
+            "ପୋର୍ଟଫୋଲିଓ ପରିଚାଳନା",
+            "ଶିକ୍ଷା ଫଣ୍ଡ ଯୋଜନା",
+            "ରିଅଲ୍ ଷ୍ଟେଟ୍ ବିନିଯୋଗ ମାର୍ଗଦର୍ଶନ"
+          ]
+        },
+        "cta": {
+          "title": "ଆପଣଙ୍କର ଆର୍ଥିକ ଭବିଷ୍ୟତକୁ ସୁରକ୍ଷିତ କରିବାକୁ ପ୍ରସ୍ତୁତ କି?",
+          "subtitle": "ସମ୍ପୂର୍ଣ୍ଣ ଆର୍ଥିକ ସମାଧାନ ବିଷୟରେ ଆଜି ଆମ ବିଶେଷଜ୍ଞଙ୍କ ସହିତ କଥା ହୁଅନ୍ତୁ",
+          "button": "ପରାମର୍ଶ ବୁକ୍ କରନ୍ତୁ"
+        }
+      }
+    
   
 
                 
